--- a/Bombones2025.Servicios/Bombones2025.Servicios.csproj
+++ b/Bombones2025.Servicios/Bombones2025.Servicios.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bombones2025.DatosSql\Bombones2025.DatosSql.csproj" />
+    <ProjectReference Include="..\Bombones2025.Utilidades\Bombones2025.Utilidades.csproj" />
   </ItemGroup>
 
 </Project>
