--- a/Bombones2025.Windows/Bombones2025.Windows.csproj
+++ b/Bombones2025.Windows/Bombones2025.Windows.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Bombones2025.Entidades\Bombones2025.Entidades.csproj" />
     <ProjectReference Include="..\Bombones2025.Servicios\Bombones2025.Servicios.csproj" />
   </ItemGroup>
